--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -3,3 +3,14 @@
 h1 {
     color: $text-color;
 }
+
+.line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.card-title-a {
+    text-decoration: none;
+}
