--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,27 @@
-<h1>HOME PAGE</h1>
+<div class='mt-4 mb-4'>
+    <div class='row'>
+        {{#each products}}
+            <div class='col-sm-6 col-lg-4'>
+                <div class='card mt-4'>
+                    <a href='./products/{{this.slug}}'>
+                        <img
+                            src='{{this.image}}'
+                            class='card-img-top'
+                            alt='{{this.name}}'
+                        />
+                    </a>
+                    <div class='card-body'>
+                        <a class='card-title-a' href='./products/{{this.slug}}'>
+
+                            <h5 class='card-title'>{{this.name}}</h5>
+                        </a>
+                        <p
+                            class='card-text line-clamp-2'
+                        >{{this.description}}</p>
+                        <a href='#' class='btn btn-primary'>Buy Product</a>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
+    </div>
+</div>
