--- a/src/resources/views/products/show.hbs
+++ b/src/resources/views/products/show.hbs
@@ -12,7 +12,9 @@
                 allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
                 allowfullscreen
             ></iframe>
-            <div class='description'>{{productDetail.description}}</div>
+            <div class='description'>Description:
+                {{productDetail.description}}</div>
+            <div class='rating'>Rating: {{productDetail.rating}}</div>
         </div>
     </div>
 </div>
