--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -14,3 +14,18 @@ h1 {
 .card-title-a {
     text-decoration: none;
 }
+
+.navbar-collapse {
+    flex-grow: 0;
+}
+
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.nav-link {
+    // padding: 0 16px;
+}
