--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,32 +1,29 @@
 <nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
-    <div class='container-fluid'>
+    <div class='container'>
         <a class='navbar-brand' href='/'>Healthy Online</a>
-        <button
-            class='navbar-toggler'
-            type='button'
-            data-bs-toggle='collapse'
-            data-bs-target='#navbarSupportedContent'
-            aria-controls='navbarSupportedContent'
-            aria-expanded='false'
-            aria-label='Toggle navigation'
-        >
-            <span class='navbar-toggler-icon'></span>
-        </button>
-        <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-            <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
-                <li class='nav-item'>
-                    <a
-                        class='nav-link active'
-                        aria-current='page'
-                        href='#'
-                    >Home</a>
-                </li>
-                <li class='nav-item'>
-                    <a class='nav-link' href='/products/create'>Tạo sản phẩm</a>
-                </li>
+        <div class='collapse navbar-collapse' id='navbarNavDarkDropdown'>
+            <ul class='navbar-nav'>
+                <li class='nav-item dropdown'>
+                    <button
+                        class='btn btn-dark dropdown-toggle'
+                        data-bs-toggle='dropdown'
+                        aria-expanded='false'
+                    >
+                        <img class='user-avatar' src='/img/IMG_2416.jpeg' />
 
+                        Anh Tú
+                    </button>
+                    <ul class='dropdown-menu dropdown-menu-dark'>
+                        <li class='nav-item'>
+                            <a class='nav-link' href='/products/create'>Tạo sản
+                                phẩm</a>
+                            <a class='nav-link' href='/me/stored-products'>Sản
+                                phẩm của tôi</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
-
         </div>
+
     </div>
 </nav>
