--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,29 +1,27 @@
-<nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
-    <div class='container'>
-        <a class='navbar-brand' href='/'>Healthy Online</a>
-        <div class='collapse navbar-collapse' id='navbarNavDarkDropdown'>
-            <ul class='navbar-nav'>
-                <li class='nav-item dropdown'>
-                    <button
-                        class='btn btn-dark dropdown-toggle'
-                        data-bs-toggle='dropdown'
-                        aria-expanded='false'
-                    >
-                        <img class='user-avatar' src='/img/IMG_2416.jpeg' />
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="/">Healthy Online</a>
+    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <button
+            class="btn btn-dark dropdown-toggle"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <img class="user-avatar" src="/img/IMG_2416.jpeg" />
 
-                        Anh Tú
-                    </button>
-                    <ul class='dropdown-menu dropdown-menu-dark'>
-                        <li class='nav-item'>
-                            <a class='nav-link' href='/products/create'>Tạo sản
-                                phẩm</a>
-                            <a class='nav-link' href='/me/stored-products'>Sản
-                                phẩm của tôi</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-
+            Anh Tú
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li class="nav-item">
+              <a class="nav-link" href="/products/create">Tạo sản phẩm</a>
+              <a class="nav-link" href="/me/stored-products">Sản phẩm của tôi</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div>
+
+  </div>
 </nav>
