--- a/src/resources/views/products/edit.hbs
+++ b/src/resources/views/products/edit.hbs
@@ -1,53 +1,53 @@
-<div class='mt-4'>
-    <h3>Cập nhật sản phẩm</h3>
-    <form method='POST' action='/products/{{productId._id}}?_method=PUT'>
-        <div class='mb-3'>
-            <label for='name' class='form-label'>Tên</label>
-            <input
-                value='{{productId.name}}'
-                type='text'
-                name='name'
-                class='form-control'
-                id='name'
-            />
+<div class="mt-4">
+  <h3>Cập nhật sản phẩm</h3>
+  <form method="POST" action="/products/{{productId._id}}?_method=PUT">
+    <div class="mb-3">
+      <label for="name" class="form-label">Tên</label>
+      <input
+        value="{{productId.name}}"
+        type="text"
+        name="name"
+        class="form-control"
+        id="name"
+      />
 
-        </div>
+    </div>
 
-        <div class='mb-3'>
-            <label for='description' class='form-label'>Mô tả</label>
-            <textarea
-                type='text'
-                name='description'
-                class='form-control'
-                id='description'
-            >{{productId.description}}</textarea>
+    <div class="mb-3">
+      <label for="description" class="form-label">Mô tả</label>
+      <textarea
+        type="text"
+        name="description"
+        class="form-control"
+        id="description"
+      >{{productId.description}}</textarea>
 
-        </div>
+    </div>
 
-        <div class='mb-3'>
-            <label for='videoId' class='form-label'>VideoId</label>
-            <input
-                value='{{productId.videoId}}'
-                type='text'
-                name='videoId'
-                class='form-control'
-                id='videoId'
-            />
+    <div class="mb-3">
+      <label for="videoId" class="form-label">VideoId</label>
+      <input
+        value="{{productId.videoId}}"
+        type="text"
+        name="videoId"
+        class="form-control"
+        id="videoId"
+      />
 
-        </div>
+    </div>
 
-        <div class='mb-3'>
-            <label for='rating' class='form-label'>Rating</label>
-            <input
-                value='{{productId.rating}}'
-                type='text'
-                name='rating'
-                class='form-control'
-                id='rating'
-            />
+    <div class="mb-3">
+      <label for="rating" class="form-label">Rating</label>
+      <input
+        value="{{productId.rating}}"
+        type="text"
+        name="rating"
+        class="form-control"
+        id="rating"
+      />
 
-        </div>
+    </div>
 
-        <button type='submit' class='btn btn-primary'>Lưu lại</button>
-    </form>
+    <button type="submit" class="btn btn-primary">Lưu lại</button>
+  </form>
 </div>
