--- a/src/resources/views/products/show.hbs
+++ b/src/resources/views/products/show.hbs
@@ -1,20 +1,20 @@
-<div class='mt-4'>
-    <div class='row'>
-        <h2 class='col-3'>Danh mục sản phẩm</h2>
-        <div class='col-9'>
-            <h2 class='name'>{{productDetail.name}}</h2>
-            <iframe
-                width='560'
-                height='315'
-                src='https://www.youtube.com/embed/{{productDetail.videoId}}'
-                title='YouTube video player'
-                frameborder='0'
-                allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
-                allowfullscreen
-            ></iframe>
-            <div class='description'>Description:
-                {{productDetail.description}}</div>
-            <div class='rating'>Rating: {{productDetail.rating}}</div>
-        </div>
+<div class="mt-4">
+  <div class="row">
+    <h2 class="col-3">Danh mục sản phẩm</h2>
+    <div class="col-9">
+      <h2 class="name">{{productDetail.name}}</h2>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/{{productDetail.videoId}}"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <div class="description">Description:
+        {{productDetail.description}}</div>
+      <div class="rating">Rating: {{productDetail.rating}}</div>
     </div>
+  </div>
 </div>
