Update, Soft Delete, Delete

--- a/src/resources/views/me/trash-products.hbs
+++ b/src/resources/views/me/trash-products.hbs
@@ -1,7 +1,7 @@
 <div class="mt-4">
   <div>
     <h3>Sản phẩm của tôi</h3>
-    <a href="/me/trash-products" class="text-decoration-none">
+    <a href="/me/stored-products" class="text-decoration-none">
       <div style="display: flex; align-items: center; gap: 8px">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -13,7 +13,7 @@
             d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
           />
         </svg>
-        <span>Thùng rác ({{deletedCount}})</span>
+        <span>Danh sách sản phẩm</span>
       </div>
     </a>
   </div>
@@ -23,7 +23,7 @@
         <th scope="col">#</th>
         <th scope="col">Tên sản phẩm</th>
         <th scope="col">Mô tả</th>
-        <th scope="col">Thời gian tạo</th>
+        <th scope="col">Thời gian xoá</th>
         <th></th>
       </tr>
     </thead>
@@ -33,13 +33,13 @@
         <th scope="row">{{sum @index 1}}</th>
         <td>{{this.name}}</td>
         <td>{{this.description}}</td>
-        <td>{{this.createdAt}}</td>
+        <td>{{this.deletedAt}}</td>
         <td style="display: flex; gap: 16px">
           <a
             type="button"
-            class="btn btn-outline-primary"
-            href="/products/{{this._id}}/edit"
-            >Sửa</a
+            class="btn btn-outline-primary btn-restore"
+            data-id="{{this._id}}"
+            >Khôi phục</a
           >
           <button
             data-id="{{this._id}}"
@@ -48,18 +48,13 @@
             data-bs-toggle="modal"
             data-bs-target="#delete-product-modal"
           >
-            Xoá
+            Xoá vĩnh viễn
           </button>
         </td>
       </tr>
       {{else}}
       <tr>
-        <td colspan="5" class="text-center">
-          Không có sản phẩm nào.
-          <a href="/products/create" class="text-decoration-none"
-            >Thêm sản phẩm</a
-          >
-        </td>
+        <td colspan="5" class="text-center">Thùng rác rỗng.</td>
       </tr>
       {{/each}}
     </tbody>
@@ -71,7 +66,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Xoá sản phẩm</h5>
+        <h5 class="modal-title">Xoá sản phẩm vĩnh viễn</h5>
         <button
           type="button"
           class="btn-close"
@@ -80,14 +75,17 @@
         ></button>
       </div>
       <div class="modal-body">
-        <p>Bạn có chắc chắn muốn xoá sản phẩm này?</p>
+        <p>
+          Hành động này không thể khôi phục. Bạn có chắc chắn muốn xoá sản phẩm
+          này?
+        </p>
       </div>
       <div class="modal-footer">
         <button id="btn-delete-product" type="button" class="btn btn-danger">
-          Xoá bỏ
+          Xoá vĩnh viễn
         </button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Huỷ
+          Huỷ bỏ
         </button>
       </div>
     </div>
@@ -97,6 +95,7 @@
 <script>
   let btnModalDelete = document.getElementById('delete-product-modal');
   let btnDeleteProduct = document.getElementById('btn-delete-product');
+  let btnRestore = $('.btn-restore');
 
   let productId;
 
@@ -106,10 +105,21 @@
   });
 
   btnDeleteProduct.onclick = () => {
-    fetch('/products/' + productId, {
+    fetch('/products/' + productId + '/force', {
       method: 'DELETE',
     })
       .then(() => location.reload())
       .catch(() => console.log('Error'));
   };
+
+  btnRestore.click(function (e) {
+    e.preventDefault();
+    let restoreId = $(this).data('id');
+
+    fetch('/products/' + restoreId + '/restore', {
+      method: 'PATCH',
+    })
+      .then(() => location.reload())
+      .catch(() => console.log('Error'));
+  });
 </script>
