--- a/src/resources/views/products/create.hbs
+++ b/src/resources/views/products/create.hbs
@@ -3,30 +3,31 @@
     <div class="mb-3">
       <label for="name" class="form-label">Tên</label>
       <input type="text" name="name" class="form-control" id="name" />
-
     </div>
 
     <div class="mb-3">
       <label for="description" class="form-label">Mô tả</label>
-      <input
+      <textarea
         type="text"
         name="description"
         class="form-control"
         id="description"
-      />
-
+      ></textarea>
     </div>
 
     <div class="mb-3">
       <label for="videoId" class="form-label">VideoId</label>
       <input type="text" name="videoId" class="form-control" id="videoId" />
+    </div>
 
+    <div class="mb-3">
+      <label for="cdnId" class="form-label">CdnId</label>
+      <input type="text" name="cdnId" class="form-control" id="cdnId" />
     </div>
 
     <div class="mb-3">
       <label for="rating" class="form-label">Rating</label>
       <input type="text" name="rating" class="form-control" id="rating" />
-
     </div>
 
     <button type="submit" class="btn btn-primary">Tạo sản phẩm</button>
