--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,31 +1,49 @@
 @import 'variables';
 
 h1 {
-    color: $text-color;
+  color: $text-color;
 }
 
 .line-clamp-2 {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .card-title-a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .navbar-collapse {
-    flex-grow: 0;
+  flex-grow: 0;
+}
+
+.card {
+  border-radius: 16px;
+}
+
+.card-img-top {
+  aspect-ratio: 4/3;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 
 .user-avatar {
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    margin-right: 4px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  margin-right: 4px;
 }
 
 .modal.show .modal-dialog {
-    margin-top: 20%;
+  margin-top: 20%;
+}
+
+.card-title {
+  height: 48px;
+}
+
+.card-text {
+  height: 48px;
 }
