--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,25 +1,20 @@
 <div class="mt-4 mb-4">
   <div class="row">
     {{#each products}}
-      <div class="col-sm-6 col-lg-4">
-        <div class="card mt-4">
-          <a href="./products/{{this.slug}}">
-            <img
-              src="{{this.image}}"
-              class="card-img-top"
-              alt="{{this.name}}"
-            />
+    <div class="col-sm-6 col-lg-3">
+      <div class="card mt-4">
+        <a href="./products/{{this.slug}}">
+          <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}" />
+        </a>
+        <div class="card-body">
+          <a class="card-title-a" href="./products/{{this.slug}}">
+            <h5 class="card-title line-clamp-2">{{this.name}}</h5>
           </a>
-          <div class="card-body">
-            <a class="card-title-a" href="./products/{{this.slug}}">
-
-              <h5 class="card-title">{{this.name}}</h5>
-            </a>
-            <p class="card-text line-clamp-2">{{this.description}}</p>
-            <a href="#" class="btn btn-primary">Buy Product</a>
-          </div>
+          <p class="card-text line-clamp-2">{{this.description}}</p>
+          <a href="#" class="btn btn-primary">Buy Product</a>
         </div>
       </div>
+    </div>
     {{/each}}
   </div>
 </div>
