pagination page home

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -56,3 +56,10 @@ h1 {
 .input-group {
   width: 20%;
 }
+
+.activeCss {
+  background-color: #e9ecef;
+}
+.pagination {
+  justify-content: center;
+}
