--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -21,6 +21,7 @@
               <a class="nav-link" href="/me/stored-products"
                 >Sản phẩm của tôi</a
               >
+              <a class="nav-link" href="/update-password">Đổi mật khẩu</a>
               <a id="logout" class="nav-link" href="/logout">Đăng xuất</a>
             </li>
           </ul>
